更新依赖文件和数据库连接

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driverClass=com.mysql.cj.jdbc.Driver
-jdbc.jdbcUrl=jdbc:mysql://localhost:5726/ssm
+jdbc.jdbcUrl=jdbc:mysql://localhost:3306/ssm?serverTimezone=Asia/Shanghai
 jdbc.user=root
-jdbc.password=
+jdbc.password=1234
